[gd_scene load_steps=2 format=3 uid="uid://5q6e5wgm2627"]

[ext_resource type="Script" uid="uid://4clyr7wx3456" path="res://scripts/ui/menus/hunting_menu/hunting_menu.gd" id="1_ym2r4"]

[node name="HuntingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ym2r4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3647059, 0.5921569, 0.5176471, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 36.0
offset_right = 20.0
offset_bottom = 59.0
grow_horizontal = 2
text = "Hunting Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -197.0
offset_right = 20.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Mission"

[node name="VScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MissionContainer" type="VBoxContainer" parent="VBoxContainer/VScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 171.0
offset_top = 115.0
offset_right = 280.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Start Mission"

[connection signal="pressed" from="StartButton" to="." method="start_mission"]
